# Moodle

./: .dockerignore  .env.template  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: format-and-lint.yml
Moodle.git/: config  packed-refs
Moodle.git.bfg-report/2025-06-18/13-14-25/: cache-stats.txt  deleted-files.txt  object-id-map.old-new.txt
Moodle.git.bfg-report/2025-06-20/12-00-38/: cache-stats.txt  deleted-files.txt  object-id-map.old-new.txt
Moodle.git/info/: refs
Moodle.git/objects/info/: commit-graph  packs
Moodle.git/objects/pack/: pack-040d7ab4dfdb28637f627e175fae4cc1ed174064.bitmap  pack-040d7ab4dfdb28637f627e175fae4cc1ed174064.idx  pack-040d7ab4dfdb28637f627e175fae4cc1ed174064.pack  pack-040d7ab4dfdb28637f627e175fae4cc1ed174064.rev  pack-0bb0af7894b310c6e085148164281d74f1397387.bitmap  pack-0bb0af7894b310c6e085148164281d74f1397387.idx  (+2 more)
src/api/: deps.py
src/api/v1/: routes.py
src/core/: authentication.py  config.py
src/crud/: admin.py  course.py  section.py  student.py  tag.py  teacher.py  user.py
src/database/: session.py
src/models/: base.py  models.py
src/schemas/: all_models.py
src/utils/: common.py  custom_responses.py  email_utils.py  s3.py  token_utils.py
tests/: admin_crud_test 2.py  admin_crud_test.py  admin_router_test.py  course_crud_test.py  course_router_test.py  section_crud_test.py  section_router_test.py  student_crud_test.py  student_router_test.py  tag_crud_test.py  tag_router_test.py  teacher_crud_test.py  teacher_router_test.py  user_crud_test 2  user_crud_test.py  user_router_test.py
(+10 files in other folders)
